Update README and configure with IntelliJ