@@ -50,13 +50,30 @@ Uses Java and JavaFx.
 ![alt_text](https://github.com/BhavyaC16/Plants-Vs-Zombies/blob/master/GameplayScreenshots/3.png)
 
 ## How To play
-### Executing the JAR File
+### Build & Run with IntelliJ
 To play the game, the following steps can be followed:
-1. Clone this repository using the command: `git clone https://github.com/BhavyaC16/Plants-Vs-Zombies.git`
-2. cd into the directory `Plant-Vs-Zombies-JAR` using: `cd Plants-Vs-Zombies/Plant-Vs-Zombies-JAR`
-3. Download the JavaFX SDK 11.0.2 from [here](https://gluonhq.com/products/javafx/), depending on your platform. Unzip and situate the folder `javafx-sdk-11.0.2` in `Plants-Vs-Zombies/Plant-Vs-Zombies-JAR`
-4. Execute the command `./PlantsVsZombies.sh` . Alternatively, execute the command `java --module-path ~/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media -jar PlantVsZombies.jar`<br>
-(Note: `--module-path` specifies the path to your JavaFX SDK 11 lib folder. The variable `LIB_PATH` in `PlantsVsZombies.sh` holds the path to the lib folder, and can be updated accordingly.)
+1. Clone this repository using the command: `git clone https://github.com/kkpan11/Plants-Vs-Zombies.git`
+2. Download the OpenJFX 17 or above version, you can choose one of the following distributions(https://whichjdk.com/):
+   - [Gluon](https://gluonhq.com/products/javafx/)
+   - [BellSoft](https://bell-sw.com/pages/downloads/) 
+   - [Azul](https://www.azul.com/downloads/?package=jdk)
+
+   Or you can just install with [SDKMAN](https://sdkman.io/jdks)
+   ```shell
+   sdk install java 17.0.5.fx-librca
+   ```
+3. Configure the [Project Structure](https://www.jetbrains.com/help/idea/project-settings-and-structure.html) settings on IntelliJ to use downloaded SDK as Project SDK and Module SDK.
+   - Steps: Go to **File** → **Project Structure** -> **Project Settings** -> *Project* and *Modules*
+
+4. **Build** & **Run** the project on `IntelliJ` and enjoy to play the game
+
+**PS.**
+Encountered issues when I try to run. These might be helpful.
+   - [Java FX Modular Application, Module not found (Java 17, Intellij)](https://stackoverflow.com/questions/71468784/java-fx-modular-application-module-not-found-java-17-intellij)
+   - [Intellij 2021.3.2, JavaFX Maven project not resolving dependencies correctly](https://stackoverflow.com/questions/71526616/intellij-2021-3-2-javafx-maven-project-not-resolving-dependencies-correctly)
+   - [JavaFX Font not being rendered correctly](https://stackoverflow.com/questions/67893273/javafx-font-not-being-rendered-correctly)
+   - [When running the program in netBeans the font looks extremely weird](https://stackoverflow.com/questions/66891857/when-running-the-program-in-netbeans-the-font-looks-extremely-weird)
+
 
 ## Code and assets
 Path to code: `PlantVsZombies/src/sample` <br>
